--- a/MaterializeClient/MaterializeClient.csproj
+++ b/MaterializeClient/MaterializeClient.csproj
@@ -108,11 +108,20 @@
         <Compile Include="MzUpdate.cs" />
         <Compile Include="MzViewMeta.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Properties\Settings.Designer.cs">
+          <AutoGen>True</AutoGen>
+          <DesignTimeSharedInput>True</DesignTimeSharedInput>
+          <DependentUpon>Settings.settings</DependentUpon>
+        </Compile>
         <Compile Include="RxExtensions.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="App.config" />
       <None Include="packages.config" />
+      <None Include="Properties\Settings.settings">
+        <Generator>SettingsSingleFileGenerator</Generator>
+        <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+      </None>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.1\build\Microsoft.Extensions.Logging.Abstractions.targets" Condition="Exists('..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.1\build\Microsoft.Extensions.Logging.Abstractions.targets')" />
