--- a/MaterializeExcelAddIn/packages.config
+++ b/MaterializeExcelAddIn/packages.config
@@ -1,23 +1,32 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AddinX.Bootstrap.Autofac" version="1.0.1" targetFramework="net48" />
   <package id="AddinX.Bootstrap.Contract" version="1.0.0" targetFramework="net48" />
   <package id="AddinX.Wpf.Contract" version="1.0.3" targetFramework="net48" />
   <package id="AddinX.Wpf.Implementation" version="1.0.3" targetFramework="net48" />
   <package id="Autofac" version="6.4.0" targetFramework="net48" />
+  <package id="ControlzEx" version="4.4.0" targetFramework="net48" />
+  <package id="DynamicData" version="7.9.5" targetFramework="net48" />
   <package id="ExcelDna.AddIn" version="1.6.0-rc1" targetFramework="net48" />
   <package id="ExcelDna.Integration" version="1.6.0-rc1" targetFramework="net48" />
   <package id="ExcelDna.IntelliSense" version="1.6.0-rc1" targetFramework="net48" />
   <package id="ExcelDna.Registration" version="1.6.0-rc1" targetFramework="net48" />
+  <package id="MahApps.Metro" version="2.4.9" targetFramework="net48" />
+  <package id="MaterialDesignColors" version="2.0.6" targetFramework="net48" />
+  <package id="MaterialDesignThemes" version="4.5.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net48" />
   <package id="NLog" version="5.0.2" targetFramework="net48" />
-  <package id="NetOffice.Core" version="1.7.4.11" targetFramework="net48" />
-  <package id="NetOffice.Excel" version="1.7.4.11" targetFramework="net48" />
-  <package id="Prism.Core" version="8.1.97" targetFramework="net48" />
+  <package id="NetOfficeFw.Core" version="1.8.1" targetFramework="net48" />
+  <package id="NetOfficeFw.Excel" version="1.8.1" targetFramework="net48" />
+  <package id="ReactiveUI" version="18.3.1" targetFramework="net48" />
+  <package id="ReactiveUI.WPF" version="18.3.1" targetFramework="net48" />
+  <package id="Splat" version="14.4.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Reactive" version="5.0.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
