View resolution working

--- a/MaterializeExcel.TestApp/App.config
+++ b/MaterializeExcel.TestApp/App.config
@@ -13,14 +13,11 @@
     <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
         <targets>
-            <target name="logfile" xsi:type="File" fileName="file.txt"
-                    layout="${longdate}|${level:uppercase=true}|${threadname:whenEmpty=${threadid}}|${logger}|${message}" />/>
-            <!-- <target name="logconsole" xsi:type="Console" /> -->
+            <target name="logconsole" xsi:type="Console" />
         </targets>
 
         <rules>
-            <!-- <logger name="*" minlevel="Debug" writeTo="logconsole" /> -->
-            <logger name="*" minlevel="Debug" writeTo="logfile" />
+            <logger name="*" minlevel="Debug" writeTo="logconsole" />
         </rules>
     </nlog>
 
@@ -49,6 +46,18 @@
             <dependentAssembly>
                 <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
