--- a/MaterializeExcel.Events/MaterializeExcel.Events.csproj
+++ b/MaterializeExcel.Events/MaterializeExcel.Events.csproj
@@ -38,7 +38,7 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="AddToSheetEvent.cs" />
+        <Compile Include="AddToSheetRequest.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
