--- a/MaterializeExcelAddIn/App.config
+++ b/MaterializeExcelAddIn/App.config
@@ -1,27 +1,44 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="MaterializeExcelAddIn.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings"
+                      type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="MaterializeExcelAddIn.Properties.Settings"
+                     type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+                     allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
         <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
-
     </configSections>
 
-    <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <system.diagnostics>
+        <sources>
+            <!-- Here we set the least severe SourceLevel that will be logged by the Excel-DNA TraceSource - 
+                 options are: 'Off', 'Critical', 'Error', 'Warning', 'Information', 'Verbose' and 'All' -
+                 the default (if no switchValue setting here) is 'Warning'. 
+             -->
+            <source name="ExcelDna.Integration" switchValue="Information">
+                <listeners>
+                    <remove name="Default" />
+                    <add name="NLogListener" type="NLog.NLogTraceListener,NLog">
+                        <filter type="System.Diagnostics.EventTypeFilter" initializeData="All" />
+                    </add>
+                </listeners>
+            </source>
+        </sources>
+    </system.diagnostics>
+
+    <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
         <targets>
-            <target name="logfile" xsi:type="File" fileName="file.txt"
-                    layout="${longdate}|${level:uppercase=true}|${threadname:whenEmpty=${threadid}}|${logger}|${message}" />/> />
-            <target name="logconsole" xsi:type="Console" />
+            <target name="logfile" xsi:type="File" fileName="materializeexcel.log"  deleteOldFileOnStartup="true"/>
         </targets>
 
         <rules>
-            <logger name="*" minlevel="Debug" writeTo="logconsole" />
             <logger name="*" minlevel="Debug" writeTo="logfile" />
         </rules>
     </nlog>
-    
+
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
@@ -33,11 +50,13 @@
                 <bindingRedirect oldVersion="0.0.0.0-6.4.0.0" newVersion="6.4.0.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+                <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51"
+                                  culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+                <assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60"
+                                  culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.1" newVersion="6.0.0.1" />
             </dependentAssembly>
             <dependentAssembly>
@@ -45,11 +64,13 @@
                 <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+                <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51"
+                                  culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+                <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a"
+                                  culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
@@ -57,12 +78,21 @@
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.5" newVersion="6.0.0.5" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+                <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51"
+                                  culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="ReactiveUI" publicKeyToken="null" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-18.3.0.0" newVersion="18.3.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Splat" publicKeyToken="null" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-14.4.0.0" newVersion="14.4.0.0" />
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
