--- a/MaterializeExcelAddIn/MaterializeExcelAddIn.csproj
+++ b/MaterializeExcelAddIn/MaterializeExcelAddIn.csproj
@@ -33,12 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AddinX.Bootstrap.Autofac, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\AddinX.Bootstrap.Autofac.1.0.1\lib\net45\AddinX.Bootstrap.Autofac.dll</HintPath>
-    </Reference>
-    <Reference Include="AddinX.Bootstrap.Contract, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\AddinX.Bootstrap.Contract.1.0.0\lib\net45\AddinX.Bootstrap.Contract.dll</HintPath>
-    </Reference>
     <Reference Include="AddinX.Ribbon.Contract">
       <HintPath>..\AddinXLib\AddinX.Ribbon.Contract.dll</HintPath>
     </Reference>
@@ -114,6 +108,9 @@
     <Reference Include="Splat, Version=14.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Splat.14.4.1\lib\netstandard2.0\Splat.dll</HintPath>
     </Reference>
+    <Reference Include="Splat.Autofac, Version=14.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Splat.Autofac.14.4.1\lib\net462\Splat.Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -156,12 +153,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddIn.cs" />
-    <Compile Include="AddinContext.cs" />
+    <Compile Include="AddInContext.cs" />
     <Compile Include="AddinRibbon.cs" />
     <Compile Include="Controller\MainController.cs" />
     <Compile Include="Controller\MainViewHost.cs" />
     <Compile Include="Controller\MainViewHost.Designer.cs" />
-    <Compile Include="Controller\SampleController.cs" />
+    <Compile Include="Controller\TaskPaneController.cs" />
     <Compile Include="Controller\WpfInteractionController.cs" />
     <Compile Include="ExcelFunctions.cs" />
     <Compile Include="Manipulation\ExcelInteraction.cs" />
@@ -171,11 +168,14 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Startup\Autofac\AutofacRunnerMain.cs" />
     <Compile Include="Startup\Bootstrapper.cs" />
+    <Compile Include="Startup\Contract\IRunner.cs" />
+    <Compile Include="Startup\Contract\IRunnerMain.cs" />
     <Compile Include="Startup\RunnerControllers.cs" />
     <Compile Include="Startup\RunnerExtra.cs" />
     <Compile Include="Startup\RunnerInitial.cs" />
-    <Compile Include="Startup\RunnerWpfObjects.cs" />
+    <Compile Include="Startup\RunnerUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -190,6 +190,10 @@
       <Project>{44dff1e9-a142-48bb-a1f6-6b7c3b512524}</Project>
       <Name>MaterializeClient</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MaterializeExcel.Events\MaterializeExcel.Events.csproj">
+      <Project>{20317431-baae-4483-9904-810c8bdec2e7}</Project>
+      <Name>MaterializeExcel.Events</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MaterializeExcel.Events\MaterializeExcel.Events\MaterializeExcel.Events.csproj">
       <Project>{20317431-baae-4483-9904-810c8bdec2e7}</Project>
       <Name>MaterializeExcel.Events</Name>
@@ -197,6 +201,10 @@
     <ProjectReference Include="..\MaterializeExcel.View\MaterializeExcel.View.csproj">
       <Project>{056b24ff-2c58-4b2c-8152-6fee4cfb2fb0}</Project>
       <Name>MaterializeExcel.View</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MaterializeExcelViewModel\MaterializeExcelViewModel.csproj">
+      <Project>{79db185f-bb30-46a2-ba2d-7ccc5df45541}</Project>
+      <Name>MaterializeExcelViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
