--- a/MaterializeExcelAddIn/packages.config
+++ b/MaterializeExcelAddIn/packages.config
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AddinX.Bootstrap.Autofac" version="1.0.1" targetFramework="net48" />
-  <package id="AddinX.Bootstrap.Contract" version="1.0.0" targetFramework="net48" />
   <package id="AddinX.Wpf.Contract" version="1.0.3" targetFramework="net48" />
   <package id="AddinX.Wpf.Implementation" version="1.0.3" targetFramework="net48" />
   <package id="Autofac" version="6.4.0" targetFramework="net48" />
@@ -22,6 +20,7 @@
   <package id="ReactiveUI" version="18.3.1" targetFramework="net48" />
   <package id="ReactiveUI.WPF" version="18.3.1" targetFramework="net48" />
   <package id="Splat" version="14.4.1" targetFramework="net48" />
+  <package id="Splat.Autofac" version="14.4.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
