--- a/MaterializeExcelViewModel/MaterializeExcelViewModel.csproj
+++ b/MaterializeExcelViewModel/MaterializeExcelViewModel.csproj
@@ -65,9 +65,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CatalogNodeViewModel.cs" />
     <Compile Include="MainControlViewModel.cs" />
     <Compile Include="CatalogViewModel.cs" />
+    <Compile Include="Nodes\ColumnNodeViewModel.cs" />
+    <Compile Include="Nodes\ObjectNodeViewModel.cs" />
+    <Compile Include="Nodes\DatabaseNodeViewModel.cs" />
+    <Compile Include="Nodes\NodeViewModel.cs" />
+    <Compile Include="Nodes\SchemaNodeViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CatalogNode.cs" />
     <Compile Include="Services\CatalogResultRow.cs" />
@@ -81,6 +85,10 @@
     <ProjectReference Include="..\..\MaterializeExcel\MaterializeClient\MaterializeClient.csproj">
       <Project>{44dff1e9-a142-48bb-a1f6-6b7c3b512524}</Project>
       <Name>MaterializeClient</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MaterializeExcel.Events\MaterializeExcel.Events.csproj">
+      <Project>{20317431-baae-4483-9904-810c8bdec2e7}</Project>
+      <Name>MaterializeExcel.Events</Name>
     </ProjectReference>
     <ProjectReference Include="..\MaterializeExcel.Events\MaterializeExcel.Events\MaterializeExcel.Events.csproj">
       <Project>{20317431-baae-4483-9904-810c8bdec2e7}</Project>
