--- a/MaterializeExcel.View/packages.config
+++ b/MaterializeExcel.View/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DynamicData" version="7.9.14" targetFramework="net48" />
+  <package id="MahApps.Metro.IconPacks.FontAwesome" version="4.11.0" targetFramework="net48" />
+  <package id="MahApps.Metro.IconPacks.Material" version="4.11.0" targetFramework="net48" />
   <package id="MaterialDesignColors" version="2.0.6" targetFramework="net48" />
   <package id="MaterialDesignThemes" version="4.5.0" targetFramework="net48" />
   <package id="ReactiveUI" version="18.3.1" targetFramework="net48" />
