--- a/MaterializeExcel.TestApp/MaterializeExcel.TestApp.csproj
+++ b/MaterializeExcel.TestApp/MaterializeExcel.TestApp.csproj
@@ -164,9 +164,9 @@
         <Project>{056b24ff-2c58-4b2c-8152-6fee4cfb2fb0}</Project>
         <Name>MaterializeExcel.View</Name>
       </ProjectReference>
-      <ProjectReference Include="..\MaterializeExcelViewModel\MaterializeExcelViewModel.csproj">
+      <ProjectReference Include="..\MaterializeExcel.ViewModel\MaterializeExcel.ViewModel.csproj">
         <Project>{79db185f-bb30-46a2-ba2d-7ccc5df45541}</Project>
-        <Name>MaterializeExcelViewModel</Name>
+        <Name>MaterializeExcel.ViewModel</Name>
       </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
