Write mz_tail to formula2 property tidy up

--- a/MaterializeExcel.AddIn/App.config
+++ b/MaterializeExcel.AddIn/App.config
@@ -1,11 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="MaterializeExcel.AddIn.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings"
+                      type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="MaterializeExcel.AddIn.Properties.Settings"
+                     type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+                     allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
         <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     </configSections>
+
+    <userSettings>
+        <MaterializeExcel.AddIn.Properties.Settings>
+            <setting name="Host" serializeAs="String">
+                <value>localhost</value>
+            </setting>
+            <setting name="Port" serializeAs="String">
+                <value>6875</value>
+            </setting>
+            <setting name="Database" serializeAs="String">
+                <value>materialize</value>
+            </setting>
+            <setting name="User" serializeAs="String">
+                <value>materialize</value>
+            </setting>
+        </MaterializeExcel.AddIn.Properties.Settings>
+    </userSettings>
 
     <system.diagnostics>
         <sources>
@@ -46,11 +67,13 @@
                 <bindingRedirect oldVersion="0.0.0.0-6.4.0.0" newVersion="6.4.0.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+                <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51"
+                                  culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+                <assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60"
+                                  culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.1" newVersion="6.0.0.1" />
             </dependentAssembly>
             <dependentAssembly>
@@ -58,11 +81,13 @@
                 <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+                <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51"
+                                  culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+                <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a"
+                                  culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
@@ -70,7 +95,8 @@
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.5" newVersion="6.0.0.5" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+                <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51"
+                                  culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
             </dependentAssembly>
             <dependentAssembly>
@@ -87,20 +113,5 @@
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
-    <userSettings>
-        <MaterializeExcel.AddIn.Properties.Settings>
-            <setting name="Host" serializeAs="String">
-                <value>Marks-MacBook-Pro.local</value>
-            </setting>
-            <setting name="Port" serializeAs="String">
-                <value>6875</value>
-            </setting>
-            <setting name="Database" serializeAs="String">
-                <value>materialize</value>
-            </setting>
-            <setting name="User" serializeAs="String">
-                <value>materialize</value>
-            </setting>
-        </MaterializeExcel.AddIn.Properties.Settings>
-    </userSettings>
+
 </configuration>
