set default host to localhost

--- a/MaterializeExcel.AddIn/App.config
+++ b/MaterializeExcel.AddIn/App.config
@@ -48,7 +48,9 @@
     <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
         <targets>
-            <target name="logfile" xsi:type="File" fileName="materializeexcel.log" deleteOldFileOnStartup="true" />
+            <target name="logfile" xsi:type="File" 
+                    fileName="${specialfolder:folder=LocalApplicationData}/materializeexcel/materializeexcel.log"
+                    deleteOldFileOnStartup="true" />
         </targets>
 
         <rules>
